<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appname">Subrosa Games</string>
    <string name="default_game_info">Click retrieve to get game info</string>
    <string name="update">retrieve</string>
    <string name="create">create</string>
    <string name="not_authenticated">not authenticated</string>

    <string name="view_target_label">view target</string>
    <string name="target_image_description">current target</string>

    <string name="menu_settings">Settings</string>
    <string name="pref_api_server_title">API Server</string>
    <string name="pref_api_server_default">http://josiahgore.com:8080/subrosa-api/v1</string>
    <string name="pref_auth_server_title">Authentication Server</string>
    <string name="pref_auth_server_default">http://josiahgore.com:80</string>
    <string name="pref_image_server_title">Image Server</string>
    <string name="pref_image_server_default">http://subrosagames.com</string>

</resources>
