<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="Developer Options"
            >
        <EditTextPreference
                android:key="pref_api_server"
                android:title="@string/pref_api_server_title"
                android:summary="@string/pref_api_server_default"
                android:defaultValue="@string/pref_api_server_default"
                />
        <EditTextPreference
                android:key="pref_auth_server"
                android:title="@string/pref_auth_server_title"
                android:summary="@string/pref_auth_server_default"
                android:defaultValue="@string/pref_auth_server_default"
                />
        <EditTextPreference
                android:key="pref_image_server"
                android:title="@string/pref_image_server_title"
                android:summary="@string/pref_image_server_default"
                android:defaultValue="@string/pref_image_server_default"
                />
    </PreferenceCategory>
</PreferenceScreen>