<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:rowCount="20"
    android:columnCount="2">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_authenticated"
            android:id="@+id/authentication_token"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right"/>

    <EditText
            android:id="@+id/input"
            android:text=""
            android:inputType="number"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:maxWidth="0dip"
            android:layout_gravity="center"
            android:layout_row="2"
            android:layout_column="0"/>
    <Button
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/button"
            android:onClick="updateGameInfo"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right"/>

    <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/space"
            android:layout_row="1"
            android:layout_column="1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_game_info"
            android:id="@+id/message"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:layout_column="0"/>
    <Button
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/create_button"
            android:layout_row="5"
            android:layout_column="1"
            android:onClick="createGame"
            android:layout_gravity="right"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/created_game"
            android:layout_columnSpan="2"
            android:layout_row="6"
            android:layout_column="0"/>

    <Button
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:text="@string/view_target_label"
            android:id="@+id/view_target_button"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="right"
            android:onClick="viewTarget"
            />
</GridLayout>

